# cen-kmers

./: .gitignore  GSE88907.SraRunTable.csv  PRJEB49306.SraRunTable.csv  PRJNA269994.SraRunTable.csv  PRJNA723952.SraRunTable.csv  README.md  Snakefile  Snakefile.7eco  Snakefile.chip  Snakefile.fastq-compression  Snakefile.hamburg  Snakefile.mpipz  Snakefile.tailswap  SraRunTable.csv  main.py  mpipz-full-genotypes.tsv  mpipz-genotypes-raw.csv  pyproject.toml
hamburg-genetic-mapping/: AA_C.csv  C_AA.csv  C_LC.csv  C_TA.csv  LC_C.csv  TA_C.csv
notebooks/: Col_assmebly_raw_reads_analysis.ipynb  analysis.ipynb  assembly_analysis.ipynb  chip_analysis.ipynb  coverage.ipynb  cross_dataset_analysis.ipynb  ecotype_analysis.ipynb  full_hamburg_analysis.ipynb  hamburg_analysis.ipynb  hamburg_corr_analysis.ipynb  hamburg_genetic_mapping.ipynb  hamburg_mpipz_corr_diff_analysis.ipynb  hamburg_sra_metadata_analysis.ipynb  kmer_mapping.ipynb  mpipz_analysis.ipynb  mpipz_hamburg_comp_analysis.ipynb  tail_swap_analysis.ipynb
scripts/: compress_feathers.py  convert_tsv.py  correlate_kmer_counts_with_genotypes.py  join_kmer_counts_feather.py  join_kmer_counts_per_genotype.py  join_parts.py  normalize_kmer_count_by_coverage.py  split_feather.py
scripts/lib/: average.py  balanced_partitioning.py
tests/: test_balanced_partitioning.py
