[project]
name = "cen-kmers"
version = "0.1.0"
description = "Centromere K-mer Analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "snakemake>=9.5.1",
    "typer>=0.16.0",
]

[tool.isort]
profile = "black"
